update file source-sink

--- a/kafka/connect-file-source/docker-compose.yaml
+++ b/kafka/connect-file-source/docker-compose.yaml
@@ -59,11 +59,7 @@ services:
     ports:
       - 8083:8083
     volumes:
-      # - /var/run/docker.sock:/var/run/docker.sock
-      - ./connect/connect-file-source.properties:/etc/kafka/connect-file-source.properties
-      - ./connect/connect-file-sink.properties:/etc/kafka/connect-file-sink.properties
-      - ./connect/connect-standalone.properties:/etc/kafka/connect-standalone.properties
-      - ./connect/test.txt:/etc/kafka/test.txt
+      - ./connect/test.txt:/tmp/test.txt
     environment:
       CONNECT_BOOTSTRAP_SERVERS: kafka:9092
       CONNECT_REST_ADVERTISED_HOST_NAME: localhost
@@ -82,7 +78,7 @@ services:
       # CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://avro:8081'
       CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
       CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_PLUGIN_PATH: /usr/share/java
+      CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/filestream-connectors,/usr/share/confluent-hub-components
       CONNECT_LOG4J_ROOT_LOGLEVEL: INFO
 
   # schema-registry
@@ -112,12 +108,3 @@ services:
       ZK_HOSTS: "zk:2181"
       APPLICATION_SECRET: "random-secret"
     command: -Dpidfile.path=/dev/null
-  # elasticsearch:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
-  #   container_name: elasticsearch
-  #   ports:
-  #     - 9200:9200
-  #     - 9300:9300
-  #   environment:
-  #     - discovery.type=single-node
-  #     - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
